--- a/project.json
+++ b/project.json
@@ -1,5 +1,5 @@
 {
-  "name": "bounty-verify-offchain-message",
+  "name": "app",
   "$schema": "node_modules/nx/schemas/project-schema.json",
   "sourceRoot": "src",
   "projectType": "library",
@@ -8,10 +8,10 @@
       "executor": "@nx/js:tsc",
       "outputs": ["{options.outputPath}"],
       "options": {
-        "outputPath": "dist/bounty-verify-offchain-message",
+        "outputPath": "dist/app",
         "main": "./src/index.ts",
         "tsConfig": "./tsconfig.lib.json",
-        "assets": ["*.md"]
+        "assets": ["*.md", "**/*.json"]
       }
     },
     "lint": {
@@ -21,7 +21,7 @@
       "executor": "@nx/vite:test",
       "outputs": ["{options.reportsDirectory}"],
       "options": {
-        "reportsDirectory": "coverage/bounty-verify-offchain-message"
+        "reportsDirectory": "coverage/app"
       }
     }
   },
