--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
     "test": "nx test"
   },
   "dependencies": {
+    "@noble/ed25519": "1.7.1",
     "@solana-developers/helpers": "^1.5.1",
     "@solana/web3.js": "^1.90.1",
+    "bs58": "^5.0.0",
     "tslib": "^2.3.0"
   },
   "devDependencies": {
