--- a/package.json
+++ b/package.json
@@ -4,17 +4,17 @@
   "license": "MIT",
   "scripts": {
     "build": "nx build",
-    "start": "node dist/app/src/index.js",
+    "start": "node dist/app/index.js",
     "test": "nx test"
   },
   "dependencies": {
-    "@noble/ed25519": "1.7.1",
+    "@noble/ed25519": "^2.0.0",
+    "@noble/hashes": "^1.3.3",
     "@solana-developers/helpers": "^1.5.1",
-    "@solana/web3.js": "^1.90.1",
-    "bs58": "^5.0.0",
-    "tslib": "^2.3.0"
+    "bs58": "^5.0.0"
   },
   "devDependencies": {
+    "@nx/esbuild": "^18.0.7",
     "@nx/eslint": "18.0.7",
     "@nx/eslint-plugin": "18.0.7",
     "@nx/js": "18.0.7",
@@ -33,6 +33,7 @@
     "eslint-config-prettier": "^9.0.0",
     "nx": "18.0.7",
     "prettier": "^2.6.2",
+    "tslib": "^2.3.0",
     "typescript": "~5.3.2",
     "vite": "~5.0.0",
     "vitest": "^1.3.1"
@@ -40,7 +41,7 @@
   "nx": {
     "includedScripts": []
   },
-  "type": "commonjs",
+  "type": "module",
   "main": "./src/index.js",
   "typings": "./src/index.d.ts"
 }
